--- a/templates/base.html
+++ b/templates/base.html
@@ -1,110 +1,99 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<title>Mountain Metrics</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<!-- Lane: Uncomment this if you want to style the tweet results.
+<!-- Placeholder for local cache -->
 
-<link href="static/tweet/jquery.tweet.css" media="all" rel="stylesheet" type="text/css"/> 
-<link href="static/tweet/jquery.tweet.query.css" media="all" rel="stylesheet" type="text/css"/>
+<title>{{ header_title }}</title>
 
--->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="author" content="Wine Tour App" />
+<meta name="description" content="{{ header_description }}" />
+<meta name="keywords" content="{{ header_keywords }}" />
 
-<style type="text/css">{% include "css/style.css" %}</style>
-<script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
-<script language="javascript" src="static/tweet/jquery.tweet.js" type="text/javascript"></script>
+<meta name="HandheldFriendly" content="true" />
+<meta name="viewport" content="user-scalable=no, width=device-width" />
 
-<!--[if lte IE 6]><link rel="stylesheet" type="text/css" href="ie.css" /><![endif]-->
-<!-- BLOCKED OUT BY BILL - UNCLEAR THAT THIS IS NEEDED.
+<!-- <style type="text/css" media="only screen and (max-width: 480px)">{% include "css/style.css" %}</style> -->
 
- <script type="text/javascript">{% include "js/jquery-1.3.2.min.js" %}></script>
-<script type="text/javascript">{% include "js/jquery.cycle.all.min.js" %}></script>
-<script type="text/javascript">{% include "js/script.js" %}></script>
+<style type="text/css" >{% include "css/style.css" %}</style>
+<script language="javascript" src="jquery.js" type="text/javascript"></script>
+<script language="javascript" src="script.js" type="text/javascript"></script>
 
--->
-<script type='text/javascript'> 
-  jQuery(document).ready(function($) {
-    $(".tweet").tweet({
-      join_text: "auto",
-      username: "seaofclouds",
-      avatar_size: 48,
-      count: 3,
-      auto_join_text_default: "we said,", 
-      auto_join_text_ed: "we",
-      auto_join_text_ing: "we were",
-      auto_join_text_reply: "we replied",
-      auto_join_text_url: "we were checking out",
-      loading_text: "loading tweets..."
-    });
-    $("#query").tweet({
-      avatar_size: 32,
-      count: 4,
-      query: "tweet.seaofclouds.com",
-      loading_text: "searching twitter..."
-    });
-    $("#userandquery").tweet({
-      count: 3,
-      query: "from:seaofclouds&phrase=http",
-      loading_text: "searching twitter..."
-    });
-    $("#fromtwo").tweet({
-      avatar_size: 32,
-      count: 4,
-      query: "from%3Aseaofclouds+OR+from%3Alaughingsquid",
-      loading_text: "searching twitter..."
-    });
-  })      
+<!-- Placeholder for HTML5 Geo-Location
+
+<script>
+var initialLocation;
+var siberia = new google.maps.LatLng(60, 105);
+var newyork = new google.maps.LatLng(40.69847032728747, -73.9514422416687);
+var map;
+var infowindow = new google.maps.InfoWindow();
+var mapOptions = {
+  zoom: 13,
+  mapTypeId: google.maps.MapTypeId.ROADMAP
+};
+
+if (navigator.geolocation) {
+  navigator.geolocation.getCurrentPosition(showPosition, onError);
+  // also monitor position as it changes
+  navigator.geolocation.watchPosition(showPosition);
+} else {
+  onError();
+}
+
+function showPosition(position) {
+  map = new google.maps.Map(document.getElementById("content"), mapOptions);
+  
+  var lat = position.coords.latitude;
+  var lng = position.coords.longitude;
+  
+  initialLocation = new google.maps.LatLng(lat, lng);
+  map.setCenter(initialLocation);
+  infowindow.setContent(lat + " " + lng);
+  infowindow.setPosition(initialLocation);
+  infowindow.open(map);
+}
+
+function onError() {
+  if (navigator.geolocation) {
+    initialLocation = newyork;
+    contentString = "Error: The Geolocation service failed.";
+  } else {
+    initialLocation = siberia;
+    contentString = "Error: Your browser doesn't support geolocation. Are you in Siberia?";
+  }
+  mapOptions.zoom = 4;
+  map = new google.maps.Map(document.getElementById("content"), mapOptions);
+  map.setCenter(initialLocation);
+  infowindow.setContent(contentString);
+  infowindow.setPosition(initialLocation);
+  infowindow.open(map);
+}
+
 </script>
+
+  End Placeholder for HTML5 Geo-Location -->
 
 </head>
 
-<body>
+<!-- Optional header extended by templates here -->
+
 {% block header %}
 
-<!-- BEGIN wrapper -->
-<div id="wrapper">
-  <!-- BEGIN header -->
-  <div id="header">
-
-
-    <p class="links">&nbsp;  </p>
-     
-    <h1><a href="/home">Mountain Metrics</a></h1>
-    
-    <ul class="categories">
-      <li><a href="/about">About</a></li>
-      <li><a href="/home">Metrics</a></li>
-      <li><a href="/graphs">Graphs</a></li>
-      <li><a href="/home"</a>&nbsp;</li>
-    </ul>
-    
-    
-  </div>
-  
-  <!-- END header -->
 
 {% endblock %}
-	
+
+<body>
+
+<!-- Main content extended by templates here -->
+
 {% block content %}
 
 
-<!-- Content Dynamically Inserted from other HTML file -->
-    
-	
-{% endblock %}
 
-	<!-- end content -->
-    
-{% block footer %}
-    
-<!-- BEGIN footer -->
-<div id="footer">
-  <p>Copyright &copy; 2009 - Mountain Metrics - All Rights Reserved 
-</div>
-<!-- END footer -->
-    
-{% endblock %}
+{% endblock %} </p>
+<!-- Placeholder for footer -->
 
 </body>
 </html>
