--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -1,513 +1,144 @@
-* {
-	margin: 0; padding: 0;
-}
+/* --- style.css -- */
+
 body {
-	text-align: center;
-	font: 12px Verdana;
-	color: #333333;
-	/** Background color controls lower half of body whil image URL controls the header background **/
-	background: #E2E0E0 url(../static/images/blue_background.gif) repeat-x 0 0;
+    background-color: #ddd; /* Background color */
+    color: #222; /* Foreground color used for text */
+    font-family: Arial; 
+    font-size: 14px;
+    margin: 0; /* Amount of negative space around the outside of the body */
+    padding: 0; /* Amount of negative space around the inside of the body */
 }
-a {
-	color: #390102;
+ 
+#header h1 {
+    margin: 0;
+    padding: 0;
 }
-a:hover {
-	text-decoration: none;
-	color: #ff0000;
+ 
+#header h1 a {
+    background-color: #333;
+    border-bottom: 1px solid #666;
+    color: #FFF;
+    display: block;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 0;
+    text-align: center;
+    text-decoration: none;
+	text-shadow: 0px 1px 1px #fff;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#00F), to(#006));
 }
-img {
-	border: 0;
+ 
+ 
+#header ul {
+    list-style: none;
+    margin: 10px;
+    padding: 0;
 }
-
-.break {
-	font-size: 0;
-	width: 0; height: 0;
-	clear: both;
+ 
+#header ul.hide {
+    display: none;
 }
-.alignleft {
-	float: left;
-	margin: 4px 10px 5px 0;
+ 
+#header div.leftButton {
+    font-weight: bold;
+    text-align: center;
+    line-height: 28px;
+    color: white;
+    text-shadow: 0px -1px 1px rgba(0,0,0,0.6);
+    position: absolute;
+    top: 7px;
+    left: 6px;
+    max-width: 50px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border-width: 0 8px 0 14px;
+    -webkit-border-image: url(static/images/back_button.png) 0 8 0 14;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
-.alignright {
-	float: right;
-	margin: 4px 0 5px 10px;
+ 
+#header div.leftButton.clicked {
+    -webkit-border-image: url(static/images/back_button_clicked.png) 0 8 0 14;
 }
-.aligncenter {
-	text-align: center;
+ 
+#header div.pressed {
+    -webkit-border-image: url(static/images/button_clicked.png) 0 8 0 8;
 }
-.hidden {
-	display: none;
+ 
+#header ul li a {
+    background-color: #FFFFFF;
+    border: 1px solid #999999;
+    color: #222222;
+    display: block;
+    font-size: 17px;
+    font-weight: bold;
+    margin-bottom: -1px;
+    padding: 12px 10px;
+    text-decoration: none;
 }
-
-/** BEGIN wrapper **/
-#wrapper {
-	width: 925px;
-	margin: auto auto;
-	text-align: left;
+ 
+#header ul li:first-child a {
+    -webkit-border-top-left-radius: 8px;
+    -webkit-border-top-right-radius: 8px;
 }
-/** END wrapper **/
-
-/** BEGIN header **/
-#header {
-	height: 183px;
+#header ul li:last-child a {
+    -webkit-border-bottom-left-radius: 8px;
+    -webkit-border-bottom-right-radius: 8px;
 }
-	#header .pages {
-		list-style-type: none;
-		float: left;
-	}
-		#header .pages li {
-			float: left;
-			font-size: 0.9em;
-			text-transform: uppercase;
-			font-weight: bold;
-			padding-left: 2px;
-			background: url(../static/images/divider1.gif) no-repeat 0 11px;
-		}
-		#header .pages li a {
-			display: block;
-			color: #ffffff;
-			text-decoration: none;
-			padding: 9px 14px 10px;
-		}
-		#header .pages li.f {
-			padding-left: 0;
-			background: none;
-		}
-		#header .pages li.f a {
-			padding-left: 0;
-		}
-	#header .links {
-		float: right;
-		padding: 9px 0 10px 20px;
-		font-size: 0.9em;
-		color: #ffffff;
-	}
-		#header .links a {
-			color: #ffffff;
-			text-decoration: none;
-			margin: 0 3px;
-		}
-	#header h1 {
-		float: left;
-		font-size: 0;
-		padding: 40px 0 45px 5px;
-		clear: both;
-	}
-		#header h1 a {
-			display: block;
-			width: 376px; height: 27px;
-			text-indent: -9999px;
-			outline: none;
-			/** Main logo on top left **/
-			background: url(../static/images/ski_logo.gif) no-repeat 0 0;
-		}
-	#header .ad468x60 {
-		float: right;
-		padding-top: 15px;
-	}
-	#header .categories {
-		clear: both;
-		list-style-type: none;
-		height: 37px;
-		overflow: hidden;
-	}
-		#header .categories li {
-			float: left;
-			font-size: 0.9em;
-			text-transform: uppercase;
-			font-weight: bold;
-			padding-left: 2px;
-			background: url(../static/images/divider2.gif) no-repeat 0 0;
-		}
-		#header .categories li a {
-			display: block;
-			padding: 12px 18px;
-			text-decoration: none;
-		}
-		#header .categories li.f {
-			padding-left: 0;
-			background: none;
-		}
-		#header .categories li.f a {
-			padding-left: 0;
-		}
-/** END header **/
-
-/** BEGIN content **/
-#content {
-	width: 450px;
-	float: left;
-	padding: 20px 0;
+   
+#progress {
+    -webkit-border-radius: 10px;
+    background-color: rgba(0,0,0,.7);
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    height: 80px;
+    left: 60px;
+    line-height: 80px;
+    margin: 0 auto;
+    position: absolute;
+    text-align: center;
+    top: 120px;
+    width: 200px;
 }
 
-#content_wide {
-	width: 800px;
-	float: left;
-	padding: 20px 0;
+#content, #sidebar {
+    padding: 10px;
 }
-	#featured {
-		margin-bottom: 10px;
-		height: 230px;
-		overflow: hidden;
-	}
-	#content .post {
-		background: #ffffff url(../static/images/gradient.gif) repeat-x 0 0;
-		border-width: 0 1px 1px;
-		border-style: solid;
-		border-color: #CFCFCF;
-		margin-bottom: 10px;
-	}
-		#content .post img {
-				margin: 15px;
 
-		}
-		#content .post h2 {
-			text-transform: uppercase;
-			font-size: 0.9em;
-			background: url(../static/images/sidehead.gif) repeat-x 0 0;
-			padding: 9px 10px 10px;
-			margin-bottom: 10px;
-		}
-			#content .post h2 a {
-				text-decoration: none;
-			}
-		#content .post p {
-			padding-left:20px;
-			padding-top: 5px;
-			padding-bottom:10px;
-			padding-right: 20px;
-		}
-		
-		#content .post ul {
-			padding-left:40px;
-			padding-bottom:5px;
-			padding-right:20px;
-		}
-		#content .post .details {
-			padding-top: 5px;
-			font-size: 0.9em;
-			text-transform: uppercase;
-			margin-bottom: 0;
-		}
-			#content .post .details a {
-				text-decoration: none;
-			}
-	#content .postnav a {
-		font-size: 0.9em;
-		text-decoration: none;
-		font-weight: bold;
-	}
-	h2.title {
-		font-size: 1em;
-		text-transform: uppercase;
-		margin-bottom: 15px;
-	}
-	#content .single {
-		background: #ffffff url(../static/images/gradient.gif) repeat-x 0 0;
-		border: 1px solid #CFCFCF;
-		padding: 15px;
-		margin-bottom: 10px;
-	}
-		#content .single h2 {
-			margin-bottom: 10px;
-			font-size: 1.4em;
-			text-transform: none;
-		}
-		#content .single p {
-			padding-top: 5px;
-		}
-		#content .single ul, #content .single ol {
-			list-style-type: none;
-			padding: 0 10px 10px;
-		}
-		#content .single li {
-			line-height: 1.5em;
-			padding: 2px 0;
-		}
-		#content .single blockquote {
-			padding: 10px 10px 5px;
-			margin-bottom: 10px;
-			background-color: #eeeeee;
-			border-width: 1px 0;
-			border-style: solid;
-			border-color: #e0e0e0;
-		}
-		#content .single h3, #content .single h4, #content .single h5, #content .single h6 {
-			font-size: 1.2em;
-			margin-bottom: 5px;
-		}
-/** END content **/
-
-/** BEGIN sidebar **/
-#sidebar {
-	width: 450px;
-	float: right;
-	padding: 20px 0;
+#blocks ul li {
+    background-color: #FFFFFF;
+    border: 1px solid #999999;
+    color: #222222;
+    display: block;
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: -1px;
+    padding: 12px 10px;
+    text-decoration: none;
 }
-	#sidebar .box {
-		background: #ffffff url(../static/images/gradient.gif) repeat-x 0 0;
-		border-width: 0 1px 1px;
-		border-style: solid;
-		border-color: #CFCFCF;
-		margin-bottom: 10px;
-	}
-		#sidebar .box h2 {
-			text-transform: uppercase;
-			font-size: 0.9em;
-			background: url(../static/images/sidehead.gif) repeat-x 0 0;
-			padding: 9px 10px 10px;
-			margin-bottom: 10px;
-		}
-		#sidebar .box ul {
-			padding-left:40px;
-			padding-bottom:5px;
-			padding-right:20px;
 
-		}
-		#sidebar .box p {
-			padding-left:20px;
-			padding-bottom:5px;
-			padding-right:15px;
-			margin-right:10px
+#blocks ul li:first-child a {
+    -webkit-border-top-left-radius: 8px;
+    -webkit-border-top-right-radius: 8px;
+}
+#blocks ul li:last-child a {
+    -webkit-border-bottom-left-radius: 8px;
+    -webkit-border-bottom-right-radius: 8px;
+}
 
-		}
-	
-			#sidebar .box ul li a {
-				color: #2A2A2A;
-				text-decoration: none;
-			}
-			#sidebar .box ul li a:hover {
-				font-weight: bold;
-			}
-		#sidebar .box .l { float: left; }
-		#sidebar .box .l { float: right; }
-		#sidebar .box .l, #sidebar .box .r {
-			width: 125px;
-			padding: 10px;
-		}
-			#sidebar .box .l h2, #sidebar .box .r h2 {
-				font-size: 1em;
-				text-decoration: underline;
-				padding: 0;
-				background: none;
-			}
-			#sidebar .box .l ul, #sidebar .box .r ul {
-				padding: 0 0 10px;
-			}
-			#sidebar .box .l, #sidebar .box .r {
-				
-			}
-		#sidebar .box .ads {
-			text-align: center;
-			padding: 0 10px 10px;
-		}
-			#sidebar .box .ads img {
-				margin: 5px;
-			}
-		#sidebar .box .flickr {
-			padding: 0 10px 10px;
-			text-align: center;
-		}
-			#sidebar .box .flickr img {
-				margin: 5px;
-			}
-		#sidebar .box .video {
-			padding: 0 5px 10px;
-		}
-		#sidebar .box .popular li {
-			padding: 8px 0;
-		}
-		#sidebar .box .popular a {
-			font-weight: bold;
-			text-decoration: underline;
-			color: #390102;
-
-		}
-		#sidebar .box .popular p {
-			padding-top: 5px;
-		}
-		#sidebar form {
-			width: 302px; height: 39px;
-			background: url(../static/images/search.gif) no-repeat 0 0;
-			margin-bottom: 10px;
-		}
-			#sidebar form input {
-				border: 0;
-				float: left;
-				width: 210px;
-				margin: 12px 0 0 8px;
-				background-color: transparent;
-			}
-			#sidebar form button {
-				border: 0;
-				float: right;
-				text-indent: -9999px;
-				width: 75px; height: 39px;
-				background-color: transparent;
-			}
-	#sidebar .span {
-		border-top: 1px solid #CFCFCF;
-	}
-/** END sidebar **/
-
-/** BEGIN footer **/
+#blocks h2 {
+    background-color: #0099FF;
+    border: 1px solid #999999;
+    color: #222222;
+    display: block;
+    font-size: 17px;
+    font-weight: bold;
+    margin-bottom: -1px;
+    padding: 12px 10px;
+    text-decoration: none;
+}
+ 
 #footer {
-	clear: both;
-	color: #ffffff;
-	background-color: #0033ff;
-	font-size: 0.9em;
-}
-	#footer p {
-		width: 925px;
-		margin: auto auto;
-		text-align: left;
-		padding: 20px 0;
-	}
-	#footer a {
-		color: #ffffff;
-		text-decoration: none;
-	}
-	#footer a:hover {
-		text-decoration: underline;
-		color: #ffffff;
-	}
-/** END footer **/
-
-/** BEGIN miscellaneous **/
-#comments {
-	background: #ffffff url(../static/images/gradient.gif) repeat-x 0 0;
-	border: 1px solid #CFCFCF;
-	padding: 5px 15px 15px;
-	margin-bottom: 10px;
-}
-	#comments a {
-		text-decoration: none;
-	}
-	#comments h2 {
-		font-size: 1.4em;
-		margin: 10px 0;
-		font-weight: normal;
-	}
-	#comments p {
-		margin-bottom: 10px;
-		line-height: 1.6em;
-	}
-	#comments form {
-		
-	}
-	#comments form p {
-		margin-bottom: 5px;
-	}
-		#comments form input {
-			margin-right: 5px;
-		}
-		#comments form input, textarea {
-			border: 1px solid #cccccc;
-			font-size: 0.9em;
-			font-family: Verdana;
-			padding: 4px;
-			background-position: 4px 4px;
-			background-repeat: no-repeat;
-		}
-		#comments form input {
-			width: 240px;
-			border: 1px solid #cccccc;
-		}
-		#comments form textarea {
-			width: 350px;
-			padding: 4px 4px !important;
-			border: 1px solid #cccccc;
-		}
-		#comments form button {
-			border: 1px solid #a0a0a0;
-			font-size: 1em;
-			font-family: Verdana;
-			padding: 2px 6px;
-		}
-	.commentdetails {
-		margin-top: 25px;
-	}
-	.commentauthor {
-		margin-bottom: 5px !important;
-		font-weight: bold;
-	}
-	.commentdate {
-		font-size: 0.8em;
-		margin-bottom: 5px;
-		color: #909090;
-	}
-	.required {
-		color: #ff0000;
-	}
-h2.title {
-	font-size: 1em !important;
-	text-transform: uppercase;
-	padding: 10px;
-	color: #565656;
-}
-.notfound {
-	padding: 40px;
-}
-	.notfound h2 {
-		font-size: 18px;
-		font-weight: normal;
-		margin-bottom: 10px;
-	}
-/** END miscellaneous **/
-
-#comments ol {
-	list-style-type: none;
-	clear: both;
-	padding: 0;
-	margin: 0;
-}
-	#comments .buffer {
-		padding: 10px;
-	}
-	#comments ol li {
-		margin-bottom: 10px;
-	}
-	#comments ol li ul li {
-		border: 1px solid #e0e0e0;
-		padding: 10px;
-	}
-	#comments ol li .avatar {
-		float: right;
-	}
-	#comments ol li .comment-author {
-		
-	}
-		#comments ol li .comment-author .fn {
-			font-weight: bold;
-			font-size: 1.2em;
-		}
-	#comments ol li .comment-meta {
-		font-size: 0.9em;
-		color: #999999;
-		margin: 5px 0 10px;
-	}
-	#comments ol li .reply {
-		font-size: 0.9em;
-		font-weight: bold;
-		padding-bottom: 10px;
-	}
-	#comments .children {
-		list-style-type: none;
-	}
-#comments .navigation {
-	padding: 0 10px 20px;
-	font-size: 0.9em;
-}
-	#comments .navigation a {
-		color: #999999;
-		padding: 3px 8px;
-		border: 1px solid #cccccc;
-	}
-	#comments .navigation a:hover {
-		color: #000000;
-		border-color: #000000;
-		text-decoration: none;
-	}
-#comments .says {
-	display: none;
+    display: none;
 }
