final touches on new UI

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,114 +2,34 @@
 
 {% block content %}
     
-	  <!-- BEGIN content -->
-  <div id="content">
-    <!-- begin featured -->
-      <!-- begin left column -->
-      
-      <!-- BEGIN About module -->
-      <div class="post">
-        <h2>About</h2>
-        <p>Mountain Metrics is a small project by a couple of skiers.  We wanted a place to get all the info we need to head out to the resort or the backcountry.  We found ourself checking a bunch of different sites and not getting all the info we needed.  So we built Mountain Metrics and optimized it for mobile devices so we could check out the conditions when we are out enjoying the snow.  Have fun out there and be safe!</p>
-
-       <br />
-      </div>
-      <!-- END About module -->
-      
-      <!-- BEGIN data sources module -->
-      <div class="post">
-        <h2>Data Sources</h2>
-        <p>Weather Conditions</p>
-          <ul>
-            <li><a href="http://noaa.gov" target="_blank">NOAA</a></li>
-            <li><a href="http://weather.yahoo.com" target="_blank">Yahoo! Weather</a></li>
-          </ul>
-        <p>Avalanche Conditions</p>
-          <ul>
-            <li><a href="http://www.sierraavalanchecenter.org/" target="_blank">Sierra Avalanche Center</a></li>
-          </ul>
-        <p>Road Conditions</p>
-          <ul>
-            <li><a href="http://www.dot.ca.gov/" target="_blank">California Department of Transportation</a></li>
-          </ul>
-       <br />
-      </div>
-      <!-- END data sources module -->
-      
-      <!-- BEGIN contact module -->
-      <div class="post">
-        <h2>Contact</h2>
-        <p>Please use the following information to contact the team.</p>
-          <ul>
-            <li>Submit your feedback, questions, etc through the form found <a href="http://www.verysmallventures.com/contact" target="_blank">here</a>.</li>
-          </ul>
-       <br />
-      </div>
-      <!-- END contact module -->
-      
-      <!-- BEGIN data sources module -->
-      <div class="post">
-        <h2>Advertising</h2>
-        <p>We are currently exploring the option of placing ads on the site.</p>
-          <ul>
-            <li>If you are interested in advertising or partnership opportunities, please contact us <a href="http://www.verysmallventures.com/contact" target="_blank">here</a>.</li>
-          </ul>
-       <br />
-      </div>
-      <!-- END data sources module -->
-    
-  <!-- END left column -->
-  </div>
-  <!-- END content -->
+<div id="header">
   
-  
-  
-  <!-- BEGIN right column -->
-  <div id="sidebar">    
-    
-      <!-- BEGIN terms of use module -->
-      <div class="box">
-        <h2>Terms of Use</h2>
-              <p>By using this site, you accept the following terms of use. Mountain Metrics, Very Small Ventures and the creators of this site take no responsibility for the accuracy or validity of any claims or statements contained in the information, or related graphics of this site. Further, Mountain Metrics, Very Small Ventures and the creators of this site make no representation whatsoever about the suitability of any of the information contained in the information or graphics on this site for any purpose. All such information and related graphics are provided without warranty of any kind. Mountain Metrics, Very Small Ventures and the creators of this site make no representations whatsoever about any other Web site which you may access through this site. When you access a 3rd party Web site, you understand and acknowledge that it is independent from Mountain Metrics, Very Small Ventures and the creators of this site, and that Mountain Metrics, Very Small Ventures and the creators of this site have no control over the content on any such Web site. In addition, a link to a 3rd party Web site does not mean that Mountain Metrics, Very Small Ventures and the creators of this site endorses or accepts any responsibility for the content, or the use, of such Web site. It is your responsibility to take precautions to ensure that whatever you select for your use by you is free of such items such as viruses, worms, Trojan horses and other items of a destructive nature. IN NO EVENT WILL MOUNTAIN METRICS, VERY SMALL VENTURES AND THE CREATORS OF THIS SITE BE LIABLE FOR ANY DAMAGES WHATSOEVER, INCLUDING SPECIAL, INDIRECT OR CONSEQUENTIAL DAMAGES, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THE INFORMATION AVAILABLE OR REFERRED TO ON THIS SITE.</p>
-        <br />
-      </div>
-      <!-- END terms of use module -->
-      
-      <!-- BEGIN contact module -->
-      <div class="box">
-        <h2>Privacy Statement</h2>
-              <p>Introduction</p>
-              <ul>
-                <li>Mountain Metrics, Very Small Ventures and the creators of this site take privacy very seriously and will respect your right to privacy as a user.</li>
-                <li>Below you will find the privacy standards of the site.</li>
-              </ul>
-              <p>Collection and Use of Data</p>
-              <ul>
-                <li>You are not required to provide any information to this site if you do not want to.</li>
-                <li>As on many web sites, Mountain Metrics, Very Small Ventures and the creators of the site may also automatically receive general information that is contained in server log files, such as your IP address, and cookie information.  This personal user data collected will not be released to third parties without a user's explicit consent.</li>
-                <li>To collect user data, Mountain Metrics, Very Small Ventures and the creators of the site use a service called Google Analytics.  For more information on this service and the privacy implications, please refer to the <a href="http://www.google.com/analytics/tos.html">Google Analytics Privacy Policy</a>. 
-                <li>Data collected may be used to customize, alter and improve the user experience on this site.</li>
-              </ul>
-              <p>Changes to the Privacy Policy</p>
-              <ul>
-                <li>The privacy policy for this website may periodically change.</li>
-              </ul>
-              <p>Not Guaranteed</p>
-              <ul>
-                <li>While this privacy policy states standards for collection and use data, and while efforts will be made to meet the standards above, Mountain Metrics, Very Small Ventures and the creators of this site are not in a position to guarantee compliance with these standards. There may be factors beyond the site creator's control that may result in disclosure of data. Consquently, Mountain Metrics, Very Small Ventures and the creators of this site offer no warranties or representations as regards maintenance or non-disclosure of data.</li>
-              </ul>
-        <br />
-      </div>
-      <!-- END contact module -->
+  <h1><a href="./">About</a></h1>
 
+  <div id="blocks">
 
-      </div>
-      <!-- END snowfall trend module -->
+  <ul>	
+    <h2>About</h2>
+       <li>Mountain Metric is a small project by a couple of skiers.  We wanted a place to get all the info we need to head out to the resort or the backcountry.  We found ourself checking a bunch of different sites and not getting all the info we needed.  So we built Mountain Metric and optimized it for mobile devices so we could check out the conditions when we are out enjoying the snow.  Have fun out there and be safe!</li>
 
+    <h2>Data Sources
+       <li><a href="http://noaa.gov" target="_blank">NOAA</a></li>
+       <li><a href="http://weather.yahoo.com" target="_blank">Yahoo! Weather</a></li>
+       <li><a href="http://www.sierraavalanchecenter.org/" target="_blank">Sierra Avalanche Center</a></li>
+       <li><a href="http://www.dot.ca.gov/" target="_blank">California Department of Transportation</a></li>
+
+    <h2>Contact</h2>
+        <li>info@mountainmetric.com</li>
+
+    <h2>Terms of Use</h2>
+        <li>By using this site, you accept the following terms of use. Mountain Metric and the creators of this site take no responsibility for the accuracy or validity of any claims or statements contained in the information, or related graphics of this site. Further, Mountain Metric and the creators of this site make no representation whatsoever about the suitability of any of the information contained in the information or graphics on this site for any purpose. All such information and related graphics are provided without warranty of any kind. Mountain Metric and the creators of this site make no representations whatsoever about any other Web site which you may access through this site. When you access a 3rd party Web site, you understand and acknowledge that it is independent from Mountain Metric and the creators of this site, and that Mountain Metric and the creators of this site have no control over the content on any such Web site. In addition, a link to a 3rd party Web site does not mean that Mountain Metric and the creators of this site endorses or accepts any responsibility for the content, or the use, of such Web site. It is your responsibility to take precautions to ensure that whatever you select for your use by you is free of such items such as viruses, worms, Trojan horses and other items of a destructive nature. IN NO EVENT WILL MOUNTAIN METRIC AND THE CREATORS OF THIS SITE BE LIABLE FOR ANY DAMAGES WHATSOEVER, INCLUDING SPECIAL, INDIRECT OR CONSEQUENTIAL DAMAGES, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THE INFORMATION AVAILABLE OR REFERRED TO ON THIS SITE.</li>
+
+    <h2>Privacy Statement</h2>
+        <li>Mountain Metrics, Very Small Ventures and the creators of this site take privacy very seriously and will respect your right to privacy as a user. Below you will find the privacy standards of the site.  You are not required to provide any information to this site if you do not want to. As on many web sites, Mountain Metrics and the creators of the site may also automatically receive general information that is contained in server log files, such as your IP address, and cookie information.  This personal user data collected will not be released to third parties without a user's explicit consent.  To collect user data, Mountain Metrics, Very Small Ventures and the creators of the site use a service called Google Analytics.  For more information on this service and the privacy implications, please refer to the Google Analytics Privacy Policy. The privacy policy for this website may periodically change. While this privacy policy states standards for collection and use data, and while efforts will be made to meet the standards above, Mountain Metrics, Very Small Ventures and the creators of this site are not in a position to guarantee compliance with these standards. There may be factors beyond the site creator's control that may result in disclosure of data. Consequently, Mountain Metrics, Very Small Ventures and the creators of this site offer no warranties or representations as regards maintenance or non-disclosure of data.</li>
+    </ul>
 
   </div>
-  <!-- END sidebar -->
+
 </div>
-<!-- END wrapper -->
 
 {% endblock %}
