--- a/templates/base.html
+++ b/templates/base.html
@@ -95,5 +95,11 @@ function onError() {
 {% endblock %} </p>
 <!-- Placeholder for footer -->
 
+<div id="footer">
+	&copy;&nbsp;Mountain Metric&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="/about">About</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="https://spreadsheets.google.com/viewform?formkey=dFRoYkFnQlZqbEFGQ05CWXlWZkotbWc6MQ">Feedback</a>
+</div>
+
 </body>
 </html>
